--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -2,7 +2,7 @@ NAME = converter
 CC = c++
 CFLAGS = -Wall -Werror -Wextra -std=c++11 #-fsanitize=address
 
-SRCS =  main.cpp ScalarConverter.cpp
+SRCS =  main.cpp ScalarConverter.cpp SelectType.cpp HandleInt.cpp HandleFloat.cpp HandleDouble.cpp HandleChar.cpp
 OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
